feat(theater): implement 3D pet rendering with Bevy
- Add Bevy application with transparent, borderless, always-on-top window
- Implement GLB/glTF model loading with duck.glb as default
- Setup camera, point light, and directional light for proper rendering
- Add window dragging interaction
- Configure macOS-specific transparency settings
- Update justfile to build before run
- Mark M1 milestone as complete in roadmap

--- a/crates/theater/Cargo.toml
+++ b/crates/theater/Cargo.toml
@@ -23,6 +23,10 @@ features = [
     "bevy_render",
     "bevy_state",
     "bevy_winit",
+    "png",
+    "reflect_auto_register",
+    "tonemapping_luts",
     "wayland",
     "x11",
+    "zstd_rust",
 ]
