feat(theater): implement behavior script replay system
Add a comprehensive replay system for executing behavior scripts with
keyframe-based actions. This enables pets to perform scripted behaviors
including animations, movement, and scale changes.

- Add ReplayPlugin with script library and animation map resources
- Implement keyframe execution pipeline with time-based triggering
- Add smooth tweening for MoveTo and Scale actions
- Support PlayAnimation action with GLTF animation graph integration
- Handle Random action for varied behavior selection
- Add script transition logic with next script chaining
- Distinguish click events from drag interactions
- Add RON format support for script serialization in common crate
- Add AGENTS.md with project conventions and guidelines

--- a/crates/theater/Cargo.toml
+++ b/crates/theater/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 common.workspace = true
+rand.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 
@@ -23,6 +24,7 @@ features = [
     "bevy_render",
     "bevy_state",
     "bevy_winit",
+    "gltf_animation",
     "png",
     "reflect_auto_register",
     "tonemapping_luts",
