--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1"
 thiserror = "2"
 tokio = { version = "1", features = ["full", "process"] }
 toml = "0.9"
+rand = "0.9"
+ron = "0.12"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tray-icon = "0.21"
