--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -8,6 +8,7 @@ description = "Shared library for Pet desktop companion"
 config.workspace = true
 directories.workspace = true
 jiff.workspace = true
+ron.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
