--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
+          sudo apt-get install -y libgtk-3-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
       - name: Linting
         run: just clippy
 
@@ -59,7 +59,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
+          sudo apt-get install -y libgtk-3-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
       - name: Build the project
         run: just build
 
@@ -78,6 +78,6 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libglib2.0-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
+          sudo apt-get install -y libgtk-3-dev libasound2-dev libudev-dev libxkbcommon-dev libwayland-dev
       - name: Test the project
         run: just test
