--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,17 +37,8 @@ jobs:
           components: clippy
       - uses: taiki-e/install-action@just
       - uses: Swatinem/rust-cache@v2
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libxdo-dev \
-            libappindicator3-dev \
-            libasound2-dev \
-            libudev-dev \
-            libxkbcommon-dev \
-            libwayland-dev
+      - name: Install dependencies
+        run: just install-deps
       - name: Linting
         run: just clippy
 
@@ -62,18 +53,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: taiki-e/install-action@just
       - uses: Swatinem/rust-cache@v2
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libxdo-dev \
-            libappindicator3-dev \
-            libasound2-dev \
-            libudev-dev \
-            libxkbcommon-dev \
-            libwayland-dev
+      - name: Install dependencies
+        run: just install-deps
       - name: Build the project
         run: just build
 
@@ -88,17 +69,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - uses: taiki-e/install-action@just
       - uses: Swatinem/rust-cache@v2
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libxdo-dev \
-            libappindicator3-dev \
-            libasound2-dev \
-            libudev-dev \
-            libxkbcommon-dev \
-            libwayland-dev
+      - name: Install dependencies
+        run: just install-deps
       - name: Test the project
         run: just test
