--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ notify = "8"
 reqwest = { version = "0.13", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tempfile = "3"
 thiserror = "2"
 tokio = { version = "1", features = ["full", "process"] }
 toml = "0.9"
