--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -15,3 +15,6 @@ thiserror.workspace = true
 toml.workspace = true
 tracing.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+tempfile.workspace = true
