ci: add MSI packaging workflow and Windows resources
- Create package-msi.yml triggered by Release workflow completion
- Add WiX setup.wxs with 4 binaries and runtime assets
- Add Windows placeholder graphics (ico, banner, dialog bmp)
- Add [package.metadata.wix] to crates/app/Cargo.toml
- Extend `install-packaging-tools` with msi and WiX Toolset installation
- Add `package-msi` command to justfile

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -63,3 +63,7 @@ assets = [
     { source = "assets/packaging/linux/graphics/app_256x256.png", dest = "/usr/share/icons/hicolor/256x256/apps/pet.png", mode = "644" },
     { source = "assets/packaging/linux/graphics/app_512x512.png", dest = "/usr/share/icons/hicolor/512x512/apps/pet.png", mode = "644" },
 ]
+
+[package.metadata.wix]
+eula = false
+include = ["assets\\packaging\\windows\\setup.wxs"]
