chore: bump version to 0.1.0-rc.2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
             runner: ubuntu-24.04-arm
           - platform: darwin-amd64
             target: x86_64-apple-darwin
-            runner: macos-13
+            runner: macos-latest
           - platform: darwin-arm64
             target: aarch64-apple-darwin
             runner: macos-latest
