fix(ci): add cross-compilation targets to release workflow
The macOS runner (macos-latest) is now ARM64, so building for
x86_64-apple-darwin requires the target to be explicitly installed
via rustup.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@nightly
+        with:
+          targets: ${{ matrix.target }}
       - uses: taiki-e/install-action@just
       - uses: Swatinem/rust-cache@v2
 
