fix: add license field for RPM packaging
cargo-generate-rpm requires package.license to be set.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = ["crates/*"]
 [workspace.package]
 version = "0.1.0-rc.5"
 edition = "2024"
+license = "Apache-2.0"
 
 [workspace.dependencies]
 bevy = { version = "0.18", default-features = false }
