--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.package]
-version = "0.1.0-rc.6"
+version = "0.1.0"
 edition = "2024"
 license = "Apache-2.0"
 
