--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 license = "Apache-2.0"
 
 [workspace.dependencies]
+auto-launch = "0.6"
 bevy = { version = "0.18", default-features = false }
 common = { path = "crates/common" }
 config = { version = "0.15", features = ["toml"] }
