--- a/crates/manager/Cargo.toml
+++ b/crates/manager/Cargo.toml
@@ -12,6 +12,9 @@ path = "src/main.rs"
 common.workspace = true
 iced.workspace = true
 reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+uuid.workspace = true
