--- a/crates/theater/Cargo.toml
+++ b/crates/theater/Cargo.toml
@@ -11,6 +11,8 @@ path = "src/main.rs"
 [dependencies]
 common.workspace = true
 rand.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 
