--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -16,6 +16,10 @@ tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 
+[dev-dependencies]
+serde_json.workspace = true
+tempfile.workspace = true
+
 [package.metadata.deb]
 section = "Utility"
 assets = [
