--- a/crates/tray/Cargo.toml
+++ b/crates/tray/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 common.workspace = true
+tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 tray-icon.workspace = true
